# electricload

./: README.md
code/: Cargo.toml  cfg.toml  espflash.toml  sdkconfig.defaults
code/.cargo/: config.toml
code/src/: currentlogs.rs  displayctl.rs  main.rs  pidcont.rs  pulscount.rs  touchpad.rs  transfer.rs  wifi.rs
code/src/img/: convert.sh
hardware/: bom.csv  esp32_cont.kicad_sch  fanctl.kicad_sch  mosfetload.kicad_pcb  mosfetload.kicad_pro  mosfetload.kicad_sch  power_load.kicad_sch  usb_pd_power.kicad_sch
hardware/Library.pretty/: ESP32-S3-WROOM-1_EXP.kicad_mod  OLED SSD1331 SPI DISPLAY.kicad_mod
influxdb/: electric_load.json
