[package]
name = "electricload"
version = "0.1.2"
authors = ["Hiroshi Nakajima <hnakamiru1103@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.36" }
esp-idf-svc = { version = "0.51" }
log = "0.4"
esp-idf-hal = "0.45.2"
embedded-hal = "1.0.0"
embedded-svc = "0.28"
embedded-graphics = "0.7"
bmp = "0.5.0"
tinybmp = "0.4.0"
toml-cfg = "0.1.3"
ssd1331 = "0.3.0"
heapless = "0.8.0"
hmac = "0.12.1"
sha2 = "0.10.8"
url = "2.5.3"
chrono = "0.4.38"

[build-dependencies]
embuild = "0.31.3"
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"
